test sans docker cloud

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ impact-essentials ]
+    branches: [ impact-essentials-staging-2023 ]
 
 jobs:
   docker:
@@ -20,11 +20,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          version: "lab:latest"
-          driver: cloud
-          endpoint: "${{ vars.DOCKER_USER }}/test001"
-          install: true
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
